force-app/main/default/objects/I__c/fields/F4__c.field-meta.xml
<CustomField>
    <fullName>F4__c</fullName>
    <label>Cable Serial2 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>