force-app/main/default/objects/I__c/fields/F5__c.field-meta.xml
<CustomField>
    <fullName>F5__c</fullName>
    <label>Upper Pigtail MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>