force-app/main/default/objects/I__c/fields/FAP__c.field-meta.xml
<CustomField>
    <fullName>FAP__c</fullName>
    <label>FAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>