force-app/main/default/objects/I__c/fields/FAP_Target_ft__c.field-meta.xml
<CustomField>
    <fullName>FAP_Target_ft__c</fullName>
    <label>FAP Target (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>