force-app/main/default/objects/I__c/fields/FB1__c.field-meta.xml
<CustomField>
    <fullName>FB1__c</fullName>
    <label>Filter Base1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>