force-app/main/default/objects/I__c/fields/FB2__c.field-meta.xml
<CustomField>
    <fullName>FB2__c</fullName>
    <label>Filter Base2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>