force-app/main/default/objects/I__c/fields/FL_From_Surface__c.field-meta.xml
<CustomField>
    <fullName>FL_From_Surface__c</fullName>
    <label>FL From Surface</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>