force-app/main/default/objects/I__c/fields/FP4__c.field-meta.xml
<CustomField>
    <fullName>FP4__c</fullName>
    <label>Filter1 Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>