force-app/main/default/objects/I__c/fields/FP5__c.field-meta.xml
<CustomField>
    <fullName>FP5__c</fullName>
    <label>Filter2 Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>