force-app/main/default/objects/I__c/fields/FreeText_I__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I__c</fullName>
    <label>Intake/Gas SEP Serial # (1) Free Text Op</label>
    <length>100</length>
    <type>Text</type>
</CustomField>