force-app/main/default/objects/I__c/fields/FreeText_I_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I_desc__c</fullName>
    <label>Intake/Gas SEP 1 Description Free Text O</label>
    <length>100</length>
    <type>Text</type>
</CustomField>