force-app/main/default/objects/I__c/fields/FreeText_L2P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_L2P__c</fullName>
    <label>Seal 2 Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>