force-app/main/default/objects/I__c/fields/FreeText_M1P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M1P__c</fullName>
    <label>Motor 1 Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>