force-app/main/default/objects/I__c/fields/FreeText_M3__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M3__c</fullName>
    <label>Motor Serial # (3) Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>