force-app/main/default/objects/I__c/fields/FreeText_M3P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M3P__c</fullName>
    <label>Motor 3 Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>