force-app/main/default/objects/I__c/fields/FreeText_M__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M__c</fullName>
    <label>Motor Serial # (1) Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>