force-app/main/default/objects/I__c/fields/FreeText_MLC__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MLC__c</fullName>
    <label>MLC Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>