force-app/main/default/objects/I__c/fields/FreeText_MLC_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MLC_desc__c</fullName>
    <label>MLC Description Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>