force-app/main/default/objects/I__c/fields/FreeText_P2__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P2__c</fullName>
    <label>Pump Serial # (2) Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>