force-app/main/default/objects/I__c/fields/FreeText_P5_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P5_desc__c</fullName>
    <label>Pump 5 Description  Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>