force-app/main/default/objects/I__c/fields/Friction_Loss_ft__c.field-meta.xml
<CustomField>
    <fullName>Friction_Loss_ft__c</fullName>
    <label>Friction Loss (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>