force-app/main/default/objects/I__c/fields/GE_AL_Motor_2_Rerate_Derate__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_2_Rerate_Derate__c</fullName>
    <description>R-25345</description>
    <label>Motor 2 Rerate/Derate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>