force-app/main/default/objects/I__c/fields/GE_AL_Motor_3_Rerate_Derate__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_3_Rerate_Derate__c</fullName>
    <label>Motor 3 Rerate/Derate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>