force-app/main/default/objects/I__c/fields/Generator__c.field-meta.xml
<CustomField>
    <fullName>Generator__c</fullName>
    <label>Generator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>