force-app/main/default/objects/I__c/fields/GENSET_KW__c.field-meta.xml
<CustomField>
    <fullName>GENSET_KW__c</fullName>
    <label>GENSET KW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>