force-app/main/default/objects/I__c/fields/Genset_Provider__c.field-meta.xml
<CustomField>
    <fullName>Genset_Provider__c</fullName>
    <label>Genset Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>