force-app/main/default/objects/I__c/fields/H_B__c.field-meta.xml
<CustomField>
    <fullName>H_B__c</fullName>
    <label>H&amp;B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>4SS</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>4SS-UHP</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>