force-app/main/default/objects/I__c/fields/HEAD_HSG1__c.field-meta.xml
<CustomField>
    <fullName>HEAD_HSG1__c</fullName>
    <label>HEAD/HSG1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>