force-app/main/default/objects/I__c/fields/HEAD_HSG_Total__c.field-meta.xml
<CustomField>
    <fullName>HEAD_HSG_Total__c</fullName>
    <label>HEAD/HSG Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>