force-app/main/default/objects/I__c/fields/HEAD_STG_Target_Q3__c.field-meta.xml
<CustomField>
    <fullName>HEAD_STG_Target_Q3__c</fullName>
    <label>HEAD/STG @ Target Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>