force-app/main/default/objects/I__c/fields/HL__c.field-meta.xml
<CustomField>
    <fullName>HL__c</fullName>
    <label>HT (LEAD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>