force-app/main/default/objects/I__c/fields/HP_Limit_Of_LT_PMP__c.field-meta.xml
<CustomField>
    <fullName>HP_Limit_Of_LT_PMP__c</fullName>
    <label>HP Limit Of LT PMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>