force-app/main/default/objects/I__c/fields/HP_REQ_HSG1__c.field-meta.xml
<CustomField>
    <fullName>HP_REQ_HSG1__c</fullName>
    <label>HP REQ/HSG1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>