force-app/main/default/objects/I__c/fields/Hr__c.field-meta.xml
<CustomField>
    <fullName>Hr__c</fullName>
    <label>Hanger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake - Sealed</fullName>
            </value>
            <value>
                <fullName>Intake - not Sealed</fullName>
            </value>
            <value>
                <fullName>Encapsulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>