force-app/main/default/objects/I__c/fields/HS2__c.field-meta.xml
<CustomField>
    <fullName>HS2__c</fullName>
    <label>Adapter Coating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>3SS/Monel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>