force-app/main/default/objects/I__c/fields/HSG4__c.field-meta.xml
<CustomField>
    <fullName>HSG4__c</fullName>
    <label>Filter1 HSG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>3SS/Monel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>