force-app/main/default/objects/I__c/fields/HSG5__c.field-meta.xml
<CustomField>
    <fullName>HSG5__c</fullName>
    <label>Filter2 HSG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>3SS/Monel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>