force-app/main/default/objects/I__c/fields/I1H__c.field-meta.xml
<CustomField>
    <fullName>I1H__c</fullName>
    <label>Intake/Gas SEP 1 H&amp;B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>13CH</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>4SS</fullName>
            </value>
            <value>
                <fullName>DPX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>