force-app/main/default/objects/I__c/fields/I1HS__c.field-meta.xml
<CustomField>
    <fullName>I1HS__c</fullName>
    <label>Intake/Gas SEP 1 HSG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>3SS/Monel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>