force-app/main/default/objects/I__c/fields/I1M__c.field-meta.xml
<CustomField>
    <fullName>I1M__c</fullName>
    <label>Intake/Gas SEP 1 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>