force-app/main/default/objects/I__c/fields/I1N__c.field-meta.xml
<CustomField>
    <fullName>I1N__c</fullName>
    <label>Intake/Gas SEP 1 Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>