force-app/main/default/objects/I__c/fields/I1S__c.field-meta.xml
<CustomField>
    <fullName>I1S__c</fullName>
    <label>Intake/Gas SEP 1 Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>