force-app/main/default/objects/I__c/fields/I1SC__c.field-meta.xml
<CustomField>
    <fullName>I1SC__c</fullName>
    <label>Intake/Gas SEP 1 Screen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>