force-app/main/default/objects/I__c/fields/I1SH__c.field-meta.xml
<CustomField>
    <fullName>I1SH__c</fullName>
    <label>Intake/Gas SEP 1 Shaft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N50</fullName>
            </value>
            <value>
                <fullName>MNL</fullName>
            </value>
            <value>
                <fullName>HS</fullName>
            </value>
            <value>
                <fullName>UHS</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>17-4PH</fullName>
            </value>
            <value>
                <fullName>?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>