force-app/main/default/objects/I__c/fields/I1U__c.field-meta.xml
<CustomField>
    <fullName>I1U__c</fullName>
    <label>Intake/Gas SEP 1 New/Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>