force-app/main/default/objects/I__c/fields/I2__c.field-meta.xml
<CustomField>
    <fullName>I2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake/Gas SEP Serial # (2)</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Install (Intake/Gas SEP Serial # (2))</relationshipLabel>
    <relationshipName>Install8</relationshipName>
    <type>Lookup</type>
</CustomField>