force-app/main/default/objects/I__c/fields/I2M__c.field-meta.xml
<CustomField>
    <fullName>I2M__c</fullName>
    <label>Intake/Gas SEP 2 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>