force-app/main/default/objects/I__c/fields/I2N__c.field-meta.xml
<CustomField>
    <fullName>I2N__c</fullName>
    <label>Intake/Gas SEP 2 Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>