force-app/main/default/objects/I__c/fields/I2S__c.field-meta.xml
<CustomField>
    <fullName>I2S__c</fullName>
    <label>Intake/Gas SEP 2 Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>