force-app/main/default/objects/I__c/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake/Gas SEP Serial # (1)</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Install (Intake/Gas SEP Serial # (1))</relationshipLabel>
    <relationshipName>Install7</relationshipName>
    <type>Lookup</type>
</CustomField>