force-app/main/default/objects/I__c/fields/IL2__c.field-meta.xml
<CustomField>
    <fullName>IL2__c</fullName>
    <label>Intake/Gas SEP 2 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>