force-app/main/default/objects/I__c/fields/Input_Power_A_C__c.field-meta.xml
<CustomField>
    <fullName>Input_Power_A_C__c</fullName>
    <label>Input Power A-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>