force-app/main/default/objects/I__c/fields/Input_Power_B_GRND__c.field-meta.xml
<CustomField>
    <fullName>Input_Power_B_GRND__c</fullName>
    <label>Input Power B-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>