force-app/main/default/objects/I__c/fields/IR__c.field-meta.xml
<CustomField>
    <fullName>IR__c</fullName>
    <label>Install Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perm - New</fullName>
            </value>
            <value>
                <fullName>Perm - Reinstall</fullName>
            </value>
            <value>
                <fullName>Perm - Resize</fullName>
            </value>
            <value>
                <fullName>Perm - Convert WT/Rntl</fullName>
            </value>
            <value>
                <fullName>WT/Rntl - New</fullName>
            </value>
            <value>
                <fullName>WT/Rntl - Replace</fullName>
            </value>
            <value>
                <fullName>WT/Rntl - Resize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>