force-app/main/default/objects/I__c/fields/ISD__c.field-meta.xml
<CustomField>
    <fullName>ISD__c</fullName>
    <label>Intake Set Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>